--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i" rel="stylesheet">
 <body>
+<div id=app></div>
+<script src="/bundle.js" type="text/javascript"></script>
 <textarea rows=5 cols="80" id=msg></textarea>
 <button type=button onclick='host()'>Publish</button>
 
